# surfx

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: test.yml
examples/: tutorial.ipynb  tutorial.py
surfx/: __init__.py  adaptive.py  constraints.py  electrode.py  expressions.py  pattern_constraints.py  polygons.py  potential.py  saddle.py  system.py  transformations.py  utils.py
surfx/tests/: test_electrode.py  test_polygons.py  test_traps.py  test_utils.py
